--- a/piala88.html
+++ b/piala88.html
@@ -254,4 +254,19 @@
           "inLanguage": "id-ID"
         }
       </script>
+      <div style="display:none">
+<a href="https://consultapactofiscal.jalisco.gob.mx/inc/lt/slotmahjongpanda.html">https://consultapactofiscal.jalisco.gob.mx/inc/lt/slotmahjongpanda.html</a>
+<a href="https://consultapactofiscal.jalisco.gob.mx/inc/lt/hackerslot.html">https://consultapactofiscal.jalisco.gob.mx/inc/lt/hackerslot.html</a>
+<a href="http://infini88.perizinan.enrekangkab.go.id/">http://infini88.perizinan.enrekangkab.go.id/</a>
+<a href="http://gacorin.perizinan.enrekangkab.go.id/">http://gacorin.disnakin.enrekangkab.go.id/</a>
+<a href="http://gacormang.perizinan.enrekangkab.go.id/">http://gacormang.disnakin.enrekangkab.go.id/</a>
+</div>
+<div style="display: none">
+<a href="https://maxwindisini.sparkjava.com">https://maxwindisini.sparkjava.com</a>
+<a href="http://maxwinfulltime.neatline.org">http://maxwinfulltime.neatline.org</a>
+<a href="https://disinigacor.fairmlbook.org">https://disinigacor.fairmlbook.org/</a>
+<a href="https://slotserverpakistan.neatline.org/">https://slotserverpakistan.neatline.org</a>
+<a href="http://rtpharmonibet.neatline.org">http://rtpharmonibet.neatline.org</a>
+<a href="http://slotservermyanmar1.neatline.org">http://slotservermyanmar1.neatline.org</a>
+</div>
       </html>
